Attempt to add rotating pictures to JordonHQ

--- a/jordonHQ.html
+++ b/jordonHQ.html
@@ -10,7 +10,7 @@
 			<div id="church" class="menuTiles">Church</div> <!--add pic of Javascript-->
 			<div id="code" class="menuTiles">Code</div> <!--add pic of sagital head-->
 			<div id="family" class="menuTiles">Family</div> <!--add pic of church-->
-			<div id="jordonHQ">Jordon Headquarters</div> <!--pic reel-->
+			<div id="jordonHQImage">Jordon Headquarters</div> <!--pic reel-->
 
 			<div id="fitness" class="menuTiles">Fitness</div> <!--add pic of food plate-->
 			<div id="games" class="menuTiles">Games</div> <!--add pic of note-->
