Add Image, Divide div text into <p> elements

--- a/jordonHQ.html
+++ b/jordonHQ.html
@@ -6,22 +6,48 @@
 <body>
 <!--//menu to be in 4x4 border grid surrounding revolving 
 	     //pictures or captions-->
-			<div id="books" class="menuTiles">Books</div> <!--add pic of stick figure holding hands-->
-			<div id="church" class="menuTiles">Church</div> <!--add pic of Javascript-->
-			<div id="code" class="menuTiles">Code</div> <!--add pic of sagital head-->
-			<div id="family" class="menuTiles">Family</div> <!--add pic of church-->
-			<div id="jordonHQImage">Jordon Headquarters</div> <!--pic reel-->
-
-			<div id="fitness" class="menuTiles">Fitness</div> <!--add pic of food plate-->
-			<div id="games" class="menuTiles">Games</div> <!--add pic of note-->
-			<div id="food" class="menuTiles">Food</div> <!--add pic of sprout-->
-			<div id="garden" class="menuTiles">Garden</div> <!--add pic of movie reel-->
-			<div id="house" class="menuTiles">House</div> <!--add pic of dice-->
-			<div id="movies" class="menuTiles">Movies</div> <!--add pic of book-->
-			<div id="music" class="menuTiles">Music</div> <!--add pic of tennis shoe-->
-			<div id="personal" class="menuTiles">Personal</div> <!--add pic of house-->
-			<div id="slp" class="extraTiles">SLP</div> <!--add pic of computer-->
-			<div id="tech" class="extraTiles">Tech</div> <!--add pic of person-->
+			<div id="books" class="menuTiles">
+				<p id="booksTitle">Books</p> 
+			</div>
+			<div id="church" class="menuTiles">
+				<p id="churchTitle">Church</p>
+			</div>
+			<div id="code" class="menuTiles">
+				<p id="codeTitle">Code</p>
+			</div> 
+			<div id="family" class="menuTiles">
+				<p id="familyTitle">Family</p>
+			</div>
+			<div id="fitness" class="menuTiles">
+				<p id="fitnessTitle">Fitness</p>
+			</div>
+			<div id="jordonHQ" class="menuTiles">
+				<p id="jordonHQTitle">Jordon Headquarters</p>
+			</div>
+			<div id="food" class="menuTiles">
+				<p id="foodTitle">Food</p>
+			</div>
+			<div id="games" class="menuTiles">
+				<p id="gamesTitle">Games</p>
+			</div>
+			<div id="garden" class="menuTiles">
+				<p id="gardenTitle">Garden</p>
+			</div>
+			<div id="house" class="menuTiles">
+				<p id="houseTitle">House</p>
+			</div>
+			<div id="movies" class="menuTiles">
+				<p id="moviesTitle">Movies</p>
+			</div>
+			<div id="music" class="menuTiles">
+				<p id="musicTitle">Music</p>
+			</div>
+			<div id="personal" class="menuTiles">
+				<p id="personalTitle">Personal</p>
+			</div>
+			<div id="slp" class="extraTiles">SLP</div> 
+			<div id="tech" class="extraTiles">Tech</div> 
+			
 	<script src="js/jordonHQ.js"></script>
 </body>
 </html>
