Javascript working -- Rotating Pictures working

--- a/jordonHQ.html
+++ b/jordonHQ.html
@@ -22,6 +22,7 @@
 				<p id="fitnessTitle">Fitness</p>
 			</div>
 			<div id="jordonHQ" class="menuTiles">
+				<img id="jordonHQImage" src="images/family14.jpg">
 				<p id="jordonHQTitle">Jordon Headquarters</p>
 			</div>
 			<div id="food" class="menuTiles">
