Add mouseover event to <p>

--- a/jordonHQ.html
+++ b/jordonHQ.html
@@ -48,7 +48,9 @@
 			</div>
 			<div id="slp" class="extraTiles">SLP</div> 
 			<div id="tech" class="extraTiles">Tech</div> 
-		
+	
+	<script src="js/jquery-3.1.1.min.js"></script>	
 	<script src="js/jordonHQ.js"></script>
+	
 </body>
 </html>
