Attempt to add css styling

--- a/jordonHQ.html
+++ b/jordonHQ.html
@@ -1,54 +1,63 @@
 <!DOCTYPE html>
 <head>
 	<title>Jordon Headquarters</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--[if lte IE 8]>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-old-ie-min.css">
+<![endif]-->
+<!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-min.css">
+<!--<![endif]-->
+	<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css">
 	<link rel="stylesheet" href="css/jordonHQ.css">
 </head>
 <body>
 <!--//menu to be in 4x4 border grid surrounding revolving 
 	     //pictures or captions-->
-			<div id="books" class="menuTiles">
+		<ul>
+			<li id="books" class="menuTiles">
 				<p id="booksTitle">Books</p> 
-			</div>
-			<div id="church" class="menuTiles">
+			</li>
+			<li id="church" class="menuTiles">
 				<p id="churchTitle">Church</p>
-			</div>
-			<div id="code" class="menuTiles">
+			</li>
+			<li id="code" class="menuTiles">
 				<p id="codeTitle">Code</p>
-			</div> 
-			<div id="family" class="menuTiles">
+			</li> 
+			<li id="family" class="menuTiles">
 				<p id="familyTitle">Family</p>
-			</div>
-			<div id="fitness" class="menuTiles">
+			</li>
+			<li id="fitness" class="menuTiles">
 				<p id="fitnessTitle">Fitness</p>
-			</div>
-			<div id="jordonHQ" class="menuTiles">
+			</li>
+			<li id="jordonHQ" class="menuTiles">
 				<img id="jordonHQImage" src="images/family14.jpg">
 				<p id="jordonHQTitle">Jordon Headquarters</p>
-			</div>
-			<div id="food" class="menuTiles">
+			</li>
+			<li id="food" class="menuTiles">
 				<p id="foodTitle">Food</p>
-			</div>
-			<div id="games" class="menuTiles">
+			</li>
+			<li id="games" class="menuTiles">
 				<p id="gamesTitle">Games</p>
-			</div>
-			<div id="garden" class="menuTiles">
+			</li>
+			<li id="garden" class="menuTiles">
 				<p id="gardenTitle">Garden</p>
-			</div>
-			<div id="house" class="menuTiles">
+			</li>
+			<li id="house" class="menuTiles">
 				<p id="houseTitle">House</p>
-			</div>
-			<div id="movies" class="menuTiles">
+			</li>
+			<li id="movies" class="menuTiles">
 				<p id="moviesTitle">Movies</p>
-			</div>
-			<div id="music" class="menuTiles">
+			</li>
+			<li id="music" class="menuTiles">
 				<p id="musicTitle">Music</p>
-			</div>
-			<div id="personal" class="menuTiles">
+			</li>
+			<li id="personal" class="menuTiles">
 				<p id="personalTitle">Personal</p>
-			</div>
-			<div id="slp" class="extraTiles">SLP</div> 
-			<div id="tech" class="extraTiles">Tech</div> 
-	
+			</li>
+			<li id="slp" class="extraTiles">SLP</li> 
+			<li id="tech" class="extraTiles">Tech</li> 
+		</ul>	
 	<script src="js/jquery-3.1.1.min.js"></script>	
 	<script src="js/jordonHQ.js"></script>
 	
