Add icons to menu and nav, intro js

--- a/jordonHQ.html
+++ b/jordonHQ.html
@@ -146,12 +146,15 @@
 
 				<p>
 				Property of Jordon LeBaron<br />
-				&copy 2017
+				&copy; 2017
 				</p>
 				
 			</footer>
 
 		</div>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+		<script src="js/jordonHQ.js"></script>
 
 	</body>
 
